welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: identifier expected but integer literal found.
		if(day<6||day>0){return 10:00}
                                           ^alarmClock:5: error: identifier expected but integer literal found.
	}else{if(day<6||day>0){return 07:00}else{return 10:00}
                                         ^alarmClock:5: error: identifier expected but integer literal found.
	}else{if(day<6||day>0){return 07:00}else{return 10:00}
                                                           ^